--- a/src/css-style.css
+++ b/src/css-style.css
@@ -10,7 +10,7 @@ body {
   left: 0;
   top: 0;
   margin: 0;
-  background-color: var(--t);
+  background: none;
 }
 
 #App {
@@ -26,7 +26,7 @@ body {
   min-height: 100vh;
   font-size: 1em;
   color: white;
-  background-image: url("assets/background/maverickgxt.png");
+  background-image: url("/assets/background/maverickgxt.png");
   background-repeat: no-repeat;
   background-position-x: 50%;
   background-position-y: 50%;
