--- a/src/css-style.css
+++ b/src/css-style.css
@@ -22,6 +22,9 @@ body {
   min-height: 100vh;
   font-size: 1em;
   color: white;
+  /*  here  */
+  
+  /*  here  */
   background-image: url("/src/assets/background/maverickgxt.png");
   background-repeat: no-repeat;
   background-position-x: 50%;
